# pixaur

./: Cargo.toml  LICENSE  flake.nix  index.html  rustfmt.toml
.github/workflows/: rust.yml
assets/: shader.wgsl
benchmarks/panels/: Cargo.toml
benchmarks/panels/benches/: benchmark.rs
benchmarks/panels/src/: lib.rs  main.rs
crates/bar/: Cargo.toml  dsl
crates/bar/src/: main.rs
crates/example/: Cargo.toml
crates/example/benches/: benchmark.rs
crates/example/src/: lib.rs  main.rs
crates/toolkit/: Cargo.toml
crates/toolkit-derive/: Cargo.toml
crates/toolkit-derive/src/: lib.rs
crates/toolkit/assets/: shader.wgsl
crates/toolkit/src/: app.rs  app.rs.html  color.rs  content.rs  content.rs.html  debug.rs  debug.rs.html  ecs.rs  ecs_rendering.rs  error.rs  headless.rs  headless.rs.html  index.html  lib.rs  lib.rs.html  renderer.rs  style.rs  widget.rs  widget.rs.html  window.rs  window.rs.html
crates/toolkit/src/components/: mod.rs
crates/toolkit/src/content/: index.html  mod.rs  mod.rs.html  svg.rs  svg.rs.html
crates/toolkit/src/rendering/: bind_group.rs  bind_group.rs.html  bind_group_layout.rs  bind_group_layout.rs.html  commands.rs  commands.rs.html  gpu.rs  gpu.rs.html  index.html  instance.rs  instance.rs.html  material.rs  material.rs.html  mesh.rs  mesh.rs.html  mod.rs  mod.rs.html  text.rs  text.rs.html  vertex.rs  vertex.rs.html
crates/toolkit/src/types/: border.rs.html  color.rs  color.rs.html  corners.rs  corners.rs.html  index.html  mod.rs  rect.rs  rect.rs.html  stroke.rs  stroke.rs.html  texture.rs  texture.rs.html
crates/toolkit/src/types/styling/: background.rs  background.rs.html  index.html
crates/toolkit_macros/: Cargo.toml
crates/toolkit_macros/src/: lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: button.rs  image.rs  lib.rs  panel.rs  rectangle.rs  row.rs  text.rs  timer.rs
crates/wl_client/: Cargo.toml
crates/wl_client/src/: index.html  lib.rs  lib.rs.html
crates/wl_client/src/window/: index.html  mod.rs  mod.rs.html  pool.rs  pool.rs.html  transform.rs  transform.rs.html
