[workspace]
default-members = ["crates/toolkit"]
resolver = "2"
members = [ "crates/*" ]

[workspace.dependencies]
wl_client = {path = "crates/wl_client"}
toolkit = {path = "crates/toolkit"}
widgets = {path = "crates/widgets"}

smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
wayland-backend = { version = "0.3.11", features=["client_system", "rwh_06"] }
wayland-protocols = { version = "0.32.9", features = ["client"] }
tempfile = "3.20.0"
memmap2 = "0.9.7"

uuid = { version = "1.17.0", features = ["v4"]}

#GUI
swash = "0.2.5"
fontdue = "0.9.3"
ttf-parser = "0.25.1"
guillotiere = "0.6.2"

thiserror = "2.0.12"

rayon = "1.10.0"
wgpu = "26.0.1"
pollster = "0.4.0"

bytemuck = "1.23.1"
image = "0.25.6"
glam = { version = "0.30.5", features = ["bytemuck"] }

once_cell = "1.21.3"
enum_dispatch = "0.3.13"
derive_more = { version = "2.0.1", features = ["from"] }

#test
bevy_ecs = "0.16.1"
paste = "1.0.15"
