[package]
name = "toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
wl_client.workspace = true
toolkit_macros.workspace = true

wayland-client.workspace = true
wayland-backend.workspace = true
swash.workspace = true
fontdue.workspace = true
ttf-parser.workspace = true
wgpu.workspace = true
pollster.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
image.workspace = true
glam.workspace = true
guillotiere.workspace = true
once_cell.workspace = true
enum_dispatch.workspace = true
derive_more.workspace = true

#test
bevy_ecs.workspace = true

#debug
tracy-client.workspace = true
